--- a/.github/workflows/ios_build.yml
+++ b/.github/workflows/ios_build.yml
@@ -15,15 +15,20 @@ jobs:
       - name: Setup Flutter
         uses: subosito/flutter-action@v2
         with:
-          flutter-version: 'stable'
+          flutter-version: '3.24.3'   # ✅ Explicit version (works on macOS runners)
+          channel: 'stable'
+
+      - name: Flutter Doctor
+        run: flutter doctor -v
 
       - name: Install dependencies
         run: flutter pub get
 
-      - name: Build iOS release
+      - name: Build iOS release (no codesign)
         run: flutter build ipa --no-codesign
 
       - name: Upload IPA artifact
+        if: success()
         uses: actions/upload-artifact@v4
         with:
           name: ios-build
