--- a/.github/workflows/ios_build.yml
+++ b/.github/workflows/ios_build.yml
@@ -15,11 +15,11 @@ jobs:
       - name: Setup Flutter
         uses: subosito/flutter-action@v2
         with:
-          flutter-version: '3.24.3'   # ✅ Explicit version (works on macOS runners)
+          flutter-version: '3.27.1'   # ✅ Includes Dart 3.9.2
           channel: 'stable'
 
-      - name: Flutter Doctor
-        run: flutter doctor -v
+      - name: Verify Flutter environment
+        run: flutter --version
 
       - name: Install dependencies
         run: flutter pub get
